--- a/.obsidian/workspace
+++ b/.obsidian/workspace
@@ -9,7 +9,7 @@
         "state": {
           "type": "markdown",
           "state": {
-            "file": "docs/TryHackMe/Gatekeeper.md",
+            "file": "Brainpan1.md",
             "mode": "source"
           }
         },
@@ -21,7 +21,7 @@
         "state": {
           "type": "markdown",
           "state": {
-            "file": "docs/TryHackMe/Gatekeeper.md",
+            "file": "Brainpan1.md",
             "mode": "preview"
           }
         },
@@ -52,7 +52,7 @@
             "state": {
               "type": "search",
               "state": {
-                "query": "",
+                "query": "1q2w!Q",
                 "matchingCase": false,
                 "explainSearch": false,
                 "collapseAll": false,
@@ -61,12 +61,12 @@
               }
             }
           }
-        ]
+        ],
+        "currentTab": 1
       }
     ],
     "direction": "horizontal",
-    "width": 300,
-    "collapsed": true
+    "width": 300
   },
   "right": {
     "id": "d41ae2d449daf1eb",
@@ -82,7 +82,7 @@
             "state": {
               "type": "backlink",
               "state": {
-                "file": "docs/TryHackMe/Gatekeeper.md",
+                "file": "Brainpan1.md",
                 "collapseAll": false,
                 "extraContext": false,
                 "sortOrder": "alphabetical",
@@ -102,6 +102,7 @@
   },
   "active": "070a438501542d4b",
   "lastOpenFiles": [
+    "Brainpan1.md",
     "docs/TryHackMe/Gatekeeper.md",
     "Gatekeeper.md",
     "docs/TryHackMe/Brainstorm.md",
@@ -110,7 +111,6 @@
     "docs/TryHackMe/overpass2hacked.md",
     "docs/TryHackMe/Work in Progress/relevant.md",
     "docs/TryHackMe/Work in Progress/BufferOverFlowPrep.md",
-    "docs/TryHackMe/Work in Progress/Daily Bugle.md",
-    "docs/index.md"
+    "docs/TryHackMe/Work in Progress/Daily Bugle.md"
   ]
 }
