--- a/.obsidian/workspace
+++ b/.obsidian/workspace
@@ -21,8 +21,8 @@
         "state": {
           "type": "markdown",
           "state": {
-            "file": "docs/TryHackMe/Vulnnet Roasted.md",
-            "mode": "source"
+            "file": "docs/HackTheBox/Work in Progress/Brainfuck.md",
+            "mode": "preview"
           }
         },
         "group": "3c47c4fab60da9e9"
@@ -52,7 +52,7 @@
             "state": {
               "type": "search",
               "state": {
-                "query": "1q2w!Q",
+                "query": "wordpress",
                 "matchingCase": false,
                 "explainSearch": false,
                 "collapseAll": false,
@@ -61,7 +61,8 @@
               }
             }
           }
-        ]
+        ],
+        "currentTab": 1
       }
     ],
     "direction": "horizontal",
@@ -81,7 +82,7 @@
             "state": {
               "type": "backlink",
               "state": {
-                "file": "docs/TryHackMe/Vulnnet Roasted.md",
+                "file": "docs/HackTheBox/Work in Progress/Brainfuck.md",
                 "collapseAll": false,
                 "extraContext": false,
                 "sortOrder": "alphabetical",
@@ -101,6 +102,9 @@
   },
   "active": "070a438501542d4b",
   "lastOpenFiles": [
+    "docs/HackTheBox/Work in Progress/Brainfuck.md",
+    "docs/OSCP practice exam/6. Sense.md",
+    "docs/TryHackMe/Blueprint.md",
     "docs/TryHackMe/Vulnnet Roasted.md",
     "docs/TryHackMe/Untitled.md",
     "docs/TryHackMe/Blueprint.md",
@@ -109,7 +113,6 @@
     "Gatekeeper.md",
     "docs/TryHackMe/Brainstorm.md",
     "docs/TryHackMe/steelmountain.md",
-    "docs/TryHackMe/tomghost.md",
-    "docs/TryHackMe/overpass2hacked.md"
+    "docs/TryHackMe/tomghost.md"
   ]
 }
