--- a/docs/.obsidian/workspace
+++ b/docs/.obsidian/workspace
@@ -9,8 +9,18 @@
         "state": {
           "type": "markdown",
           "state": {
-            "file": "TryHackMe/In Process/relevant.md",
+            "file": "VulnHub/Lampiano.md",
             "mode": "source"
+          }
+        }
+      },
+      {
+        "id": "9bca7d5c5df33743",
+        "type": "leaf",
+        "state": {
+          "type": "image",
+          "state": {
+            "file": "VulnHub/Pasted image 20220505075716.png"
           }
         }
       }
@@ -39,7 +49,7 @@
             "state": {
               "type": "search",
               "state": {
-                "query": "",
+                "query": "active mode",
                 "matchingCase": false,
                 "explainSearch": false,
                 "collapseAll": false,
@@ -68,7 +78,7 @@
             "state": {
               "type": "backlink",
               "state": {
-                "file": "TryHackMe/In Process/relevant.md",
+                "file": "VulnHub/Lampiano.md",
                 "collapseAll": false,
                 "extraContext": false,
                 "sortOrder": "alphabetical",
@@ -88,7 +98,12 @@
   },
   "active": "72dd90a55b49cb5e",
   "lastOpenFiles": [
-    "TryHackMe/In Process/relevant.md",
-    "index.md"
+    "VulnHub/Lampiano.md",
+    "VulnHub/Pasted image 20220505075716.png",
+    "Pasted image 20220505075752.png",
+    "VulnHub/Y0usef.md",
+    "TryHackMe/Work in Progress/Anonymous.md",
+    "index.md",
+    "TryHackMe/In Process/relevant.md"
   ]
 }
