--- a/docs/VulnHub/.obsidian/workspace
+++ b/docs/VulnHub/.obsidian/workspace
@@ -9,7 +9,7 @@
         "state": {
           "type": "markdown",
           "state": {
-            "file": "Lampiano.md",
+            "file": "Cute.md",
             "mode": "source"
           }
         },
@@ -21,8 +21,8 @@
         "state": {
           "type": "markdown",
           "state": {
-            "file": "Lampiano.md",
-            "mode": "source"
+            "file": "Cute.md",
+            "mode": "preview"
           }
         },
         "group": "ca153fe96cb932c3"
@@ -81,7 +81,7 @@
             "state": {
               "type": "backlink",
               "state": {
-                "file": "Lampiano.md",
+                "file": "Cute.md",
                 "collapseAll": false,
                 "extraContext": false,
                 "sortOrder": "alphabetical",
@@ -99,8 +99,9 @@
     "width": 300,
     "collapsed": true
   },
-  "active": "eeec7919d79dd1d9",
+  "active": "597b4c38db49b3cb",
   "lastOpenFiles": [
+    "Cute.md",
     "Lampiano.md",
     "Pasted image 20220505112416.png",
     "Pasted image 20220505111648.png",
