--- a/docs/VulnHub/.obsidian/workspace
+++ b/docs/VulnHub/.obsidian/workspace
@@ -9,7 +9,7 @@
         "state": {
           "type": "markdown",
           "state": {
-            "file": "Cute.md",
+            "file": "Cybersploit.md",
             "mode": "source"
           }
         },
@@ -21,7 +21,7 @@
         "state": {
           "type": "markdown",
           "state": {
-            "file": "Cute.md",
+            "file": "Cybersploit.md",
             "mode": "preview"
           }
         },
@@ -81,7 +81,7 @@
             "state": {
               "type": "backlink",
               "state": {
-                "file": "Cute.md",
+                "file": "Cybersploit.md",
                 "collapseAll": false,
                 "extraContext": false,
                 "sortOrder": "alphabetical",
@@ -101,6 +101,8 @@
   },
   "active": "597b4c38db49b3cb",
   "lastOpenFiles": [
+    "Cybersploit.md",
+    "Dawn.md",
     "Cute.md",
     "Lampiano.md",
     "Pasted image 20220505112416.png",
@@ -108,7 +110,6 @@
     "Pasted image 20220505075716.png",
     "Y0usef.md",
     "Pasted image 20220505111319.png",
-    "Pasted image 20220505075752.png",
-    "Pasted image 20220505111319.png.md"
+    "Pasted image 20220505075752.png"
   ]
 }
