--- a/docs/VulnHub/.obsidian/workspace
+++ b/docs/VulnHub/.obsidian/workspace
@@ -9,7 +9,7 @@
         "state": {
           "type": "markdown",
           "state": {
-            "file": "Cybersploit.md",
+            "file": "Dawn.md",
             "mode": "source"
           }
         },
@@ -21,7 +21,7 @@
         "state": {
           "type": "markdown",
           "state": {
-            "file": "Cybersploit.md",
+            "file": "Dawn.md",
             "mode": "preview"
           }
         },
@@ -81,7 +81,7 @@
             "state": {
               "type": "backlink",
               "state": {
-                "file": "Cybersploit.md",
+                "file": "Dawn.md",
                 "collapseAll": false,
                 "extraContext": false,
                 "sortOrder": "alphabetical",
@@ -101,8 +101,8 @@
   },
   "active": "597b4c38db49b3cb",
   "lastOpenFiles": [
-    "Cybersploit.md",
     "Dawn.md",
+    "Cybersploit.md",
     "Cute.md",
     "Lampiano.md",
     "Pasted image 20220505112416.png",
