--- a/docs/VulnHub/.obsidian/app.json
+++ b/docs/VulnHub/.obsidian/app.json
@@ -1,1 +1,7 @@
-{}
+{
+  "strictLineBreaks": true,
+  "showLineNumber": true,
+  "lineWrap": false,
+  "rightToLeft": false,
+  "spellcheck": true
+}
