--- a/docs/VulnHub/.obsidian/workspace
+++ b/docs/VulnHub/.obsidian/workspace
@@ -10,7 +10,7 @@
         "state": {
           "type": "markdown",
           "state": {
-            "file": "DC-1.md",
+            "file": "DC-2.md",
             "mode": "source"
           }
         },
@@ -23,7 +23,7 @@
         "state": {
           "type": "markdown",
           "state": {
-            "file": "DC-1.md",
+            "file": "DC-2.md",
             "mode": "preview"
           }
         },
@@ -83,7 +83,7 @@
             "state": {
               "type": "backlink",
               "state": {
-                "file": "DC-1.md",
+                "file": "DC-2.md",
                 "collapseAll": false,
                 "extraContext": false,
                 "sortOrder": "alphabetical",
@@ -103,6 +103,7 @@
   },
   "active": "597b4c38db49b3cb",
   "lastOpenFiles": [
+    "DC-2.md",
     "DC-1.md",
     "Dawn.md",
     "Cybersploit.md",
@@ -111,7 +112,6 @@
     "Pasted image 20220505112416.png",
     "Pasted image 20220505111648.png",
     "Pasted image 20220505075716.png",
-    "Y0usef.md",
-    "Pasted image 20220505111319.png"
+    "Y0usef.md"
   ]
 }
