--- a/docs/VulnHub/.obsidian/workspace
+++ b/docs/VulnHub/.obsidian/workspace
@@ -6,11 +6,11 @@
       {
         "id": "597b4c38db49b3cb",
         "type": "leaf",
-        "dimension": 40.8974358974359,
+        "dimension": 50.32074126870991,
         "state": {
           "type": "markdown",
           "state": {
-            "file": "Funbox3.md",
+            "file": "Funbox EasyEnum.md",
             "mode": "source"
           }
         },
@@ -19,11 +19,11 @@
       {
         "id": "eeec7919d79dd1d9",
         "type": "leaf",
-        "dimension": 59.1025641025641,
+        "dimension": 49.67925873129009,
         "state": {
           "type": "markdown",
           "state": {
-            "file": "Funbox3.md",
+            "file": "Funbox EasyEnum.md",
             "mode": "preview"
           }
         },
@@ -83,7 +83,7 @@
             "state": {
               "type": "backlink",
               "state": {
-                "file": "Funbox3.md",
+                "file": "Funbox EasyEnum.md",
                 "collapseAll": false,
                 "extraContext": false,
                 "sortOrder": "alphabetical",
@@ -103,15 +103,15 @@
   },
   "active": "597b4c38db49b3cb",
   "lastOpenFiles": [
+    "Funbox EasyEnum.md",
+    "Natraj.md",
+    "Geisha.md",
+    "Gaara.md",
+    "Funbox Rookie.md",
+    "Assertion 101.md",
     "Funbox3.md",
     "DC-2.md",
     "DC-1.md",
-    "Dawn.md",
-    "Cybersploit.md",
-    "Cute.md",
-    "Lampiano.md",
-    "Pasted image 20220505112416.png",
-    "Pasted image 20220505111648.png",
-    "Pasted image 20220505075716.png"
+    "Dawn.md"
   ]
 }
