--- a/docs/VulnHub/.obsidian/workspace
+++ b/docs/VulnHub/.obsidian/workspace
@@ -10,7 +10,7 @@
         "state": {
           "type": "markdown",
           "state": {
-            "file": "Funbox EasyEnum.md",
+            "file": "Funbox Rookie.md",
             "mode": "source"
           }
         },
@@ -23,8 +23,8 @@
         "state": {
           "type": "markdown",
           "state": {
-            "file": "Funbox EasyEnum.md",
-            "mode": "preview"
+            "file": "Funbox Rookie.md",
+            "mode": "source"
           }
         },
         "group": "ca153fe96cb932c3"
@@ -83,7 +83,7 @@
             "state": {
               "type": "backlink",
               "state": {
-                "file": "Funbox EasyEnum.md",
+                "file": "Funbox Rookie.md",
                 "collapseAll": false,
                 "extraContext": false,
                 "sortOrder": "alphabetical",
@@ -103,15 +103,15 @@
   },
   "active": "597b4c38db49b3cb",
   "lastOpenFiles": [
+    "Funbox Rookie.md",
+    "Pasted image 20220505113408.png",
+    "Funbox3.md",
     "Funbox EasyEnum.md",
     "Natraj.md",
     "Geisha.md",
     "Gaara.md",
-    "Funbox Rookie.md",
     "Assertion 101.md",
-    "Funbox3.md",
     "DC-2.md",
-    "DC-1.md",
-    "Dawn.md"
+    "DC-1.md"
   ]
 }
