--- a/docs/VulnHub/.obsidian/workspace
+++ b/docs/VulnHub/.obsidian/workspace
@@ -10,7 +10,7 @@
         "state": {
           "type": "markdown",
           "state": {
-            "file": "Funbox Rookie.md",
+            "file": "Gaara.md",
             "mode": "source"
           }
         },
@@ -23,8 +23,8 @@
         "state": {
           "type": "markdown",
           "state": {
-            "file": "Funbox Rookie.md",
-            "mode": "source"
+            "file": "Gaara.md",
+            "mode": "preview"
           }
         },
         "group": "ca153fe96cb932c3"
@@ -67,7 +67,8 @@
       }
     ],
     "direction": "horizontal",
-    "width": 300
+    "width": 300,
+    "collapsed": true
   },
   "right": {
     "id": "cb747c90b3db6110",
@@ -83,7 +84,7 @@
             "state": {
               "type": "backlink",
               "state": {
-                "file": "Funbox Rookie.md",
+                "file": "Gaara.md",
                 "collapseAll": false,
                 "extraContext": false,
                 "sortOrder": "alphabetical",
@@ -103,13 +104,13 @@
   },
   "active": "597b4c38db49b3cb",
   "lastOpenFiles": [
+    "Gaara.md",
     "Funbox Rookie.md",
     "Pasted image 20220505113408.png",
     "Funbox3.md",
     "Funbox EasyEnum.md",
     "Natraj.md",
     "Geisha.md",
-    "Gaara.md",
     "Assertion 101.md",
     "DC-2.md",
     "DC-1.md"
