--- a/docs/.obsidian/workspace
+++ b/docs/.obsidian/workspace
@@ -7,10 +7,8 @@
         "id": "72dd90a55b49cb5e",
         "type": "leaf",
         "state": {
-          "type": "image",
-          "state": {
-            "file": "Pasted image 20220505075752.png"
-          }
+          "type": "empty",
+          "state": {}
         }
       },
       {
@@ -77,7 +75,6 @@
             "state": {
               "type": "backlink",
               "state": {
-                "file": "Pasted image 20220505075752.png",
                 "collapseAll": false,
                 "extraContext": false,
                 "sortOrder": "alphabetical",
