--- a/docs/VulnHub/.obsidian/workspace
+++ b/docs/VulnHub/.obsidian/workspace
@@ -10,7 +10,7 @@
         "state": {
           "type": "markdown",
           "state": {
-            "file": "Geisha.md",
+            "file": "Inclusiveness.md",
             "mode": "source"
           }
         },
@@ -23,7 +23,7 @@
         "state": {
           "type": "markdown",
           "state": {
-            "file": "Geisha.md",
+            "file": "Inclusiveness.md",
             "mode": "preview"
           }
         },
@@ -83,7 +83,7 @@
             "state": {
               "type": "backlink",
               "state": {
-                "file": "Geisha.md",
+                "file": "Inclusiveness.md",
                 "collapseAll": false,
                 "extraContext": false,
                 "sortOrder": "alphabetical",
@@ -103,15 +103,15 @@
   },
   "active": "597b4c38db49b3cb",
   "lastOpenFiles": [
+    "Inclusiveness.md",
+    "Natraj.md",
     "Geisha.md",
     "Gaara.md",
     "Funbox Rookie.md",
     "Pasted image 20220505113408.png",
     "Funbox3.md",
     "Funbox EasyEnum.md",
-    "Natraj.md",
     "Assertion 101.md",
-    "DC-2.md",
-    "DC-1.md"
+    "DC-2.md"
   ]
 }
