--- a/docs/TryHackMe/.obsidian/workspace
+++ b/docs/TryHackMe/.obsidian/workspace
@@ -9,23 +9,10 @@
         "state": {
           "type": "markdown",
           "state": {
-            "file": "Work in Progress/Anonymous.md",
-            "mode": "source"
-          }
-        },
-        "group": "74d8da5fed08a71f"
-      },
-      {
-        "id": "edb50520b0aa2cc8",
-        "type": "leaf",
-        "state": {
-          "type": "markdown",
-          "state": {
-            "file": "Work in Progress/Anonymous.md",
+            "file": "Work in Progress/Throwback/session 8.md",
             "mode": "preview"
           }
-        },
-        "group": "74d8da5fed08a71f"
+        }
       }
     ],
     "direction": "vertical"
@@ -52,7 +39,7 @@
             "state": {
               "type": "search",
               "state": {
-                "query": "active mode",
+                "query": "Cyber",
                 "matchingCase": false,
                 "explainSearch": false,
                 "collapseAll": false,
@@ -65,7 +52,7 @@
       }
     ],
     "direction": "horizontal",
-    "width": 331
+    "width": 458
   },
   "right": {
     "id": "b7317ddee0fb056a",
@@ -81,7 +68,7 @@
             "state": {
               "type": "backlink",
               "state": {
-                "file": "Work in Progress/Anonymous.md",
+                "file": "Work in Progress/Throwback/session 8.md",
                 "collapseAll": false,
                 "extraContext": false,
                 "sortOrder": "alphabetical",
@@ -101,15 +88,15 @@
   },
   "active": "9249eac710ee11dd",
   "lastOpenFiles": [
-    "Work in Progress/Anonymous.md",
-    "Work in Progress/dogcat.md",
-    "Brainstorm.md",
-    "internal.md",
-    "Work in Progress/Ice.md",
-    "Work in Progress/relevant.md",
-    "Alfred.md",
-    "Blueprint.md",
-    "Brainpan1.md",
-    "BufferOverFlowPrep.md"
+    "Work in Progress/Throwback/session 8.md",
+    "Work in Progress/Throwback/10.200.70.219 Throwback-Prod.md",
+    "Work in Progress/Throwback/session 7.md",
+    "Work in Progress/Throwback/10.200.70.250.md",
+    "Untitled.md",
+    "Work in Progress/Throwback/10.200.70.138 Throwback-FW01.md",
+    "Work in Progress/Throwback/10.200.70.232  Throwback-Mail.md",
+    "Work in Progress/Throwback/10.41.0.2.md",
+    "Work in Progress/Throwback/Loot.md",
+    "Work in Progress/Anonymous.md"
   ]
 }
