--- a/docs/VulnHub/.obsidian/workspace
+++ b/docs/VulnHub/.obsidian/workspace
@@ -10,7 +10,7 @@
         "state": {
           "type": "markdown",
           "state": {
-            "file": "oscp prep.md",
+            "file": "Katana.md",
             "mode": "source"
           }
         },
@@ -23,7 +23,7 @@
         "state": {
           "type": "markdown",
           "state": {
-            "file": "oscp prep.md",
+            "file": "Katana.md",
             "mode": "preview"
           }
         },
@@ -67,8 +67,7 @@
       }
     ],
     "direction": "horizontal",
-    "width": 300,
-    "collapsed": true
+    "width": 300
   },
   "right": {
     "id": "cb747c90b3db6110",
@@ -84,7 +83,7 @@
             "state": {
               "type": "backlink",
               "state": {
-                "file": "oscp prep.md",
+                "file": "Katana.md",
                 "collapseAll": false,
                 "extraContext": false,
                 "sortOrder": "alphabetical",
@@ -104,6 +103,7 @@
   },
   "active": "597b4c38db49b3cb",
   "lastOpenFiles": [
+    "Katana.md",
     "oscp prep.md",
     "Inclusiveness.md",
     "Natraj.md",
@@ -112,7 +112,6 @@
     "Funbox Rookie.md",
     "Pasted image 20220505113408.png",
     "Funbox3.md",
-    "Funbox EasyEnum.md",
-    "Assertion 101.md"
+    "Funbox EasyEnum.md"
   ]
 }
