--- a/.obsidian/workspace
+++ b/.obsidian/workspace
@@ -6,10 +6,11 @@
       {
         "id": "070a438501542d4b",
         "type": "leaf",
+        "dimension": 48.70967741935484,
         "state": {
           "type": "markdown",
           "state": {
-            "file": "docs/Other CTFs/Quiz 7.md",
+            "file": "docs/VulnHub/Katana.md",
             "mode": "source"
           }
         },
@@ -18,10 +19,11 @@
       {
         "id": "c3bac568e85b51d4",
         "type": "leaf",
+        "dimension": 51.29032258064517,
         "state": {
           "type": "markdown",
           "state": {
-            "file": "docs/Other CTFs/Quiz 7.md",
+            "file": "docs/VulnHub/Katana.md",
             "mode": "preview"
           }
         },
@@ -81,7 +83,7 @@
             "state": {
               "type": "backlink",
               "state": {
-                "file": "docs/Other CTFs/Quiz 7.md",
+                "file": "docs/VulnHub/Katana.md",
                 "collapseAll": false,
                 "extraContext": false,
                 "sortOrder": "alphabetical",
@@ -101,6 +103,7 @@
   },
   "active": "070a438501542d4b",
   "lastOpenFiles": [
+    "docs/VulnHub/Katana.md",
     "docs/Other CTFs/Quiz 7.md",
     "docs/TryHackMe/Work in Progress/Throwback/10.200.70.219 Throwback-Prod.md",
     "docs/TryHackMe/Vulnnet Roasted.md",
@@ -109,7 +112,6 @@
     "docs/TryHackMe/Blueprint.md",
     "docs/TryHackMe/Untitled.md",
     "docs/TryHackMe/Blueprint.md",
-    "Brainpan1.md",
-    "docs/TryHackMe/Gatekeeper.md"
+    "Brainpan1.md"
   ]
 }
