--- a/docs/VulnHub/.obsidian/workspace
+++ b/docs/VulnHub/.obsidian/workspace
@@ -10,7 +10,7 @@
         "state": {
           "type": "markdown",
           "state": {
-            "file": "Katana.md",
+            "file": "Monitoring.md",
             "mode": "source"
           }
         },
@@ -23,7 +23,7 @@
         "state": {
           "type": "markdown",
           "state": {
-            "file": "Katana.md",
+            "file": "Monitoring.md",
             "mode": "preview"
           }
         },
@@ -67,7 +67,8 @@
       }
     ],
     "direction": "horizontal",
-    "width": 300
+    "width": 300,
+    "collapsed": true
   },
   "right": {
     "id": "cb747c90b3db6110",
@@ -83,7 +84,7 @@
             "state": {
               "type": "backlink",
               "state": {
-                "file": "Katana.md",
+                "file": "Monitoring.md",
                 "collapseAll": false,
                 "extraContext": false,
                 "sortOrder": "alphabetical",
@@ -103,6 +104,7 @@
   },
   "active": "597b4c38db49b3cb",
   "lastOpenFiles": [
+    "Monitoring.md",
     "Katana.md",
     "oscp prep.md",
     "Inclusiveness.md",
@@ -111,7 +113,6 @@
     "Gaara.md",
     "Funbox Rookie.md",
     "Pasted image 20220505113408.png",
-    "Funbox3.md",
-    "Funbox EasyEnum.md"
+    "Funbox3.md"
   ]
 }
