--- a/docs/VulnHub/.obsidian/workspace
+++ b/docs/VulnHub/.obsidian/workspace
@@ -6,28 +6,28 @@
       {
         "id": "597b4c38db49b3cb",
         "type": "leaf",
-        "dimension": 50.32074126870991,
+        "dimension": 48.71794871794871,
         "state": {
           "type": "markdown",
           "state": {
-            "file": "Monitoring.md",
+            "file": "Photographer.md",
             "mode": "source"
           }
         },
-        "group": "ca153fe96cb932c3"
+        "group": "c9d27b0a5f7f87e5"
       },
       {
-        "id": "eeec7919d79dd1d9",
+        "id": "b22376358ca53887",
         "type": "leaf",
-        "dimension": 49.67925873129009,
+        "dimension": 51.28205128205128,
         "state": {
           "type": "markdown",
           "state": {
-            "file": "Monitoring.md",
+            "file": "Photographer.md",
             "mode": "preview"
           }
         },
-        "group": "ca153fe96cb932c3"
+        "group": "c9d27b0a5f7f87e5"
       }
     ],
     "direction": "vertical"
@@ -67,8 +67,7 @@
       }
     ],
     "direction": "horizontal",
-    "width": 300,
-    "collapsed": true
+    "width": 300
   },
   "right": {
     "id": "cb747c90b3db6110",
@@ -84,7 +83,7 @@
             "state": {
               "type": "backlink",
               "state": {
-                "file": "Monitoring.md",
+                "file": "Photographer.md",
                 "collapseAll": false,
                 "extraContext": false,
                 "sortOrder": "alphabetical",
@@ -104,15 +103,15 @@
   },
   "active": "597b4c38db49b3cb",
   "lastOpenFiles": [
+    "Photographer.md",
+    "Cybersploit.md",
+    "Assertion 101.md",
+    "Funbox EasyEnum.md",
+    "DC-2.md",
+    "DC-1.md",
+    "Dawn.md",
+    "Cute.md",
     "Monitoring.md",
-    "Katana.md",
-    "oscp prep.md",
-    "Inclusiveness.md",
-    "Natraj.md",
-    "Geisha.md",
-    "Gaara.md",
-    "Funbox Rookie.md",
-    "Pasted image 20220505113408.png",
-    "Funbox3.md"
+    "Katana.md"
   ]
 }
