--- a/docs/TryHackMe/.obsidian/workspace
+++ b/docs/TryHackMe/.obsidian/workspace
@@ -9,10 +9,23 @@
         "state": {
           "type": "markdown",
           "state": {
-            "file": "Work in Progress/Throwback/session 8.md",
+            "file": "AD Pivoting and Lateral Movement.md",
+            "mode": "source"
+          }
+        },
+        "group": "abe7b338b1887053"
+      },
+      {
+        "id": "32c4108df3fbe1db",
+        "type": "leaf",
+        "state": {
+          "type": "markdown",
+          "state": {
+            "file": "AD Pivoting and Lateral Movement.md",
             "mode": "preview"
           }
-        }
+        },
+        "group": "abe7b338b1887053"
       }
     ],
     "direction": "vertical"
@@ -52,7 +65,8 @@
       }
     ],
     "direction": "horizontal",
-    "width": 458
+    "width": 458,
+    "collapsed": true
   },
   "right": {
     "id": "b7317ddee0fb056a",
@@ -68,7 +82,7 @@
             "state": {
               "type": "backlink",
               "state": {
-                "file": "Work in Progress/Throwback/session 8.md",
+                "file": "AD Pivoting and Lateral Movement.md",
                 "collapseAll": false,
                 "extraContext": false,
                 "sortOrder": "alphabetical",
@@ -88,6 +102,7 @@
   },
   "active": "9249eac710ee11dd",
   "lastOpenFiles": [
+    "AD Pivoting and Lateral Movement.md",
     "Work in Progress/Throwback/session 8.md",
     "Work in Progress/Throwback/10.200.70.219 Throwback-Prod.md",
     "Work in Progress/Throwback/session 7.md",
@@ -96,7 +111,6 @@
     "Work in Progress/Throwback/10.200.70.138 Throwback-FW01.md",
     "Work in Progress/Throwback/10.200.70.232  Throwback-Mail.md",
     "Work in Progress/Throwback/10.41.0.2.md",
-    "Work in Progress/Throwback/Loot.md",
-    "Work in Progress/Anonymous.md"
+    "Work in Progress/Throwback/Loot.md"
   ]
 }
