--- a/docs/VulnHub/.obsidian/workspace
+++ b/docs/VulnHub/.obsidian/workspace
@@ -10,7 +10,7 @@
         "state": {
           "type": "markdown",
           "state": {
-            "file": "Photographer.md",
+            "file": "PyExp.md",
             "mode": "source"
           }
         },
@@ -19,11 +19,11 @@
       {
         "id": "b22376358ca53887",
         "type": "leaf",
-        "dimension": 51.28205128205128,
+        "dimension": 51.28205128205129,
         "state": {
           "type": "markdown",
           "state": {
-            "file": "Photographer.md",
+            "file": "PyExp.md",
             "mode": "preview"
           }
         },
@@ -83,7 +83,7 @@
             "state": {
               "type": "backlink",
               "state": {
-                "file": "Photographer.md",
+                "file": "PyExp.md",
                 "collapseAll": false,
                 "extraContext": false,
                 "sortOrder": "alphabetical",
@@ -103,6 +103,8 @@
   },
   "active": "597b4c38db49b3cb",
   "lastOpenFiles": [
+    "PyExp.md",
+    "Potato.md",
     "Photographer.md",
     "Cybersploit.md",
     "Assertion 101.md",
@@ -110,8 +112,6 @@
     "DC-2.md",
     "DC-1.md",
     "Dawn.md",
-    "Cute.md",
-    "Monitoring.md",
-    "Katana.md"
+    "Cute.md"
   ]
 }
