--- a/docs/VulnHub/.obsidian/workspace
+++ b/docs/VulnHub/.obsidian/workspace
@@ -10,7 +10,7 @@
         "state": {
           "type": "markdown",
           "state": {
-            "file": "Y0usef.md",
+            "file": "PyExp.md",
             "mode": "source"
           }
         },
@@ -23,7 +23,7 @@
         "state": {
           "type": "markdown",
           "state": {
-            "file": "Y0usef.md",
+            "file": "PyExp.md",
             "mode": "preview"
           }
         },
@@ -63,8 +63,7 @@
               }
             }
           }
-        ],
-        "currentTab": 1
+        ]
       }
     ],
     "direction": "horizontal",
@@ -84,7 +83,7 @@
             "state": {
               "type": "backlink",
               "state": {
-                "file": "Y0usef.md",
+                "file": "PyExp.md",
                 "collapseAll": false,
                 "extraContext": false,
                 "sortOrder": "alphabetical",
@@ -102,10 +101,10 @@
     "width": 300,
     "collapsed": true
   },
-  "active": "597b4c38db49b3cb",
+  "active": "b22376358ca53887",
   "lastOpenFiles": [
-    "Y0usef.md",
     "PyExp.md",
+    "Y0usef.md",
     "Potato.md",
     "Photographer.md",
     "Cybersploit.md",
