--- a/docs/VulnHub/.obsidian/workspace
+++ b/docs/VulnHub/.obsidian/workspace
@@ -10,7 +10,7 @@
         "state": {
           "type": "markdown",
           "state": {
-            "file": "Solstice.md",
+            "file": "Sumo.md",
             "mode": "source"
           }
         },
@@ -23,7 +23,7 @@
         "state": {
           "type": "markdown",
           "state": {
-            "file": "Solstice.md",
+            "file": "Sumo.md",
             "mode": "preview"
           }
         },
@@ -83,7 +83,7 @@
             "state": {
               "type": "backlink",
               "state": {
-                "file": "Solstice.md",
+                "file": "Sumo.md",
                 "collapseAll": false,
                 "extraContext": false,
                 "sortOrder": "alphabetical",
@@ -103,6 +103,7 @@
   },
   "active": "597b4c38db49b3cb",
   "lastOpenFiles": [
+    "Sumo.md",
     "Solstice.md",
     "Seppuku.md",
     "SAR.md",
@@ -111,7 +112,6 @@
     "Potato.md",
     "Photographer.md",
     "Cybersploit.md",
-    "Assertion 101.md",
-    "Funbox EasyEnum.md"
+    "Assertion 101.md"
   ]
 }
