--- a/docs/VulnHub/.obsidian/workspace
+++ b/docs/VulnHub/.obsidian/workspace
@@ -10,7 +10,7 @@
         "state": {
           "type": "markdown",
           "state": {
-            "file": "Sumo.md",
+            "file": "noontide.md",
             "mode": "source"
           }
         },
@@ -23,7 +23,7 @@
         "state": {
           "type": "markdown",
           "state": {
-            "file": "Sumo.md",
+            "file": "noontide.md",
             "mode": "preview"
           }
         },
@@ -83,7 +83,7 @@
             "state": {
               "type": "backlink",
               "state": {
-                "file": "Sumo.md",
+                "file": "noontide.md",
                 "collapseAll": false,
                 "extraContext": false,
                 "sortOrder": "alphabetical",
@@ -103,15 +103,15 @@
   },
   "active": "597b4c38db49b3cb",
   "lastOpenFiles": [
+    "noontide.md",
+    "Y0usef.md",
     "Sumo.md",
     "Solstice.md",
     "Seppuku.md",
     "SAR.md",
     "PyExp.md",
-    "Y0usef.md",
     "Potato.md",
     "Photographer.md",
-    "Cybersploit.md",
-    "Assertion 101.md"
+    "oscp prep.md"
   ]
 }
