--- a/docs/VulnHub/.obsidian/workspace
+++ b/docs/VulnHub/.obsidian/workspace
@@ -10,7 +10,7 @@
         "state": {
           "type": "markdown",
           "state": {
-            "file": "noontide.md",
+            "file": "wpwn.md",
             "mode": "source"
           }
         },
@@ -23,7 +23,7 @@
         "state": {
           "type": "markdown",
           "state": {
-            "file": "noontide.md",
+            "file": "wpwn.md",
             "mode": "preview"
           }
         },
@@ -83,7 +83,7 @@
             "state": {
               "type": "backlink",
               "state": {
-                "file": "noontide.md",
+                "file": "wpwn.md",
                 "collapseAll": false,
                 "extraContext": false,
                 "sortOrder": "alphabetical",
@@ -103,6 +103,8 @@
   },
   "active": "597b4c38db49b3cb",
   "lastOpenFiles": [
+    "wpwn.md",
+    "Vegeta.md",
     "noontide.md",
     "Y0usef.md",
     "Sumo.md",
@@ -110,8 +112,6 @@
     "Seppuku.md",
     "SAR.md",
     "PyExp.md",
-    "Potato.md",
-    "Photographer.md",
-    "oscp prep.md"
+    "Potato.md"
   ]
 }
