--- a/docs/HackTheBox/.obsidian/workspace
+++ b/docs/HackTheBox/.obsidian/workspace
@@ -6,11 +6,11 @@
       {
         "id": "aa0e8e0ef7e3b865",
         "type": "leaf",
-        "dimension": 50.10869565217392,
+        "dimension": 50.10869565217391,
         "state": {
           "type": "markdown",
           "state": {
-            "file": "Optimum.md",
+            "file": "netmon.md",
             "mode": "source",
             "source": false
           }
@@ -24,7 +24,7 @@
         "state": {
           "type": "markdown",
           "state": {
-            "file": "Optimum.md",
+            "file": "netmon.md",
             "mode": "preview",
             "source": false
           }
@@ -85,7 +85,7 @@
             "state": {
               "type": "backlink",
               "state": {
-                "file": "Optimum.md",
+                "file": "netmon.md",
                 "collapseAll": false,
                 "extraContext": false,
                 "sortOrder": "alphabetical",
@@ -105,6 +105,7 @@
   },
   "active": "aa0e8e0ef7e3b865",
   "lastOpenFiles": [
+    "Optimum.md",
     "Search.md",
     "Remote.md",
     "Pasted image 20220713093106.png.md",
@@ -113,7 +114,6 @@
     "Legacy.md",
     "Timelapse.md",
     "In Progress/Kotarak.md",
-    "In Progress/Relevant.md",
-    "In Progress/ScriptKiddie.md"
+    "In Progress/Relevant.md"
   ]
 }
